[package]
name = "swizzler-cli"
description = "A CLI"
repository = ""
version = "0.1.0"
authors = [
    "David Peicho <david.peicho@gmail.com>"
]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/albedo-engine/albedo-channel-packer"
categories = ["multimedia::images"]
keywords = ["texture", "packing", "rendering", "cli"]

[[bin]]
name = "swizzler"
path = "src/main.rs"
bench = false

[dependencies]
swizzler = { version = "0.1.0", path = "../lib" }
structopt = "0.3.4"
atty = "0.2.13"
regex = "1.3.4"
serde = { version = "1.0.105", features = [ "derive" ] }
serde_json = "1.0"
image = "0.22.4"
