[package]
name = "swizzler"
description = ""
repository = "https://github.com/albedo-engine/albedo-channel-packer"
version = "0.1.0"
authors = [
    "David Peicho <david.peicho@gmail.com>"
]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/albedo-engine/albedo-channel-packer"
categories = ["multimedia::images"]
keywords = ["texture", "synthesis", "procedural"]

[dependencies]
num_cpus = "1.12.0"
paste = "0.1"
image = "0.22.4"
crossbeam = "0.7"
regex = "1.3.4"
